Got basic dir listing working with iRods foundational REST API.

--- a/src/index-built.html
+++ b/src/index-built.html
@@ -11,10 +11,10 @@
         Ext.onReady(function() {
             var browser = new jsfb.widgets.Browser({
                     renderTo: 'main',
-                    user: 'api_sample_user',
+                    user: 'galaxy',
                     password: '',
-                    url: 'http://iplant-vm.tacc.utexas.edu:8080',
-                    path: '/api_sample_user',
+                    url: 'http://galaxy.arl.arizona.edu/irods',
+                    path: '/galaxy',
                         console.log('item selected', data);
                     }
                 }, jsfb.app);
